.snakemake/log/2024-06-18T140758.749115.snakemake.log
Full Traceback (most recent call last):
  File "/home/jocolova/miniforge3/envs/data_acc/lib/python3.12/site-packages/snakemake/__init__.py", line 671, in snakemake
    workflow.include(
  File "/home/jocolova/miniforge3/envs/data_acc/lib/python3.12/site-packages/snakemake/workflow.py", line 1389, in include
    exec(compile(code, snakefile.get_path_or_uri(), "exec"), self.globals)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nfs/turbo/schloss-lab/jocolova/Colovas_Data_Accessibility/Snakefile", line 138
    #         """
               
SyntaxError: invalid syntax. Perhaps you forgot a comma?

SyntaxError in file /nfs/turbo/schloss-lab/jocolova/Colovas_Data_Accessibility/Snakefile, line 79:
invalid syntax. Perhaps you forgot a comma?
